@@ -1,0 +1,4 @@
+<!-- test usage and rendering of magic words -->
+{{SERVER}}
+
+{{SERVERNAME}}
